--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="layout_popular">
         <div class="img01"><a href="#"><img src="rabbit_fortune.png" alt=""></a></div>
         <div class="img01"><a href="#"><img src="tiger_fortune.png" alt=""></a></div>
-        <div class="img01"><a href="#"><img src="Ape_wild.png" alt=""></a></div>
+        <div class="img01"><a href="https://ezstat.ru/158dh7.gif"><img src="Ape_wild.png" alt=""></a></div>
     </div>
     <div class="lay_img_2">
         <div class="ploit"><a href="#"><img src="Ox_fortune.png" alt=""></a></div>
